# mcp-context-browser

./: .gitignore  .markdownlintignore  .mcb-validate.toml.example  .tarpaulin.toml  AGENTS.md  CLAUDE.md  CRATES.md  Cargo.lock.legacy  Cargo.toml  Cargo.toml.legacy  IMPLEMENTATION_GUIDE_v0.0.3.md  Makefile  README.md  REFACTORING_BASELINE.md  book.toml  clippy.toml  debug_test.rs  defect-report-20260117-184059.md  docker-compose.testing.yml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml  test_import.rs
crates/docs-adr-validator/: Cargo.toml
crates/docs-generator/: Cargo.toml
crates/docs-interactive-platform/: Cargo.toml
crates/docs-quality-gate/: Cargo.toml
crates/mcb/: Cargo.toml
crates/mcb-application/: Cargo.toml
crates/mcb-application/src/: lib.rs
crates/mcb-application/src/domain_services/: chunking.rs  indexing.rs  mod.rs  search.rs
crates/mcb-application/src/ports/: admin.rs  mod.rs  services.rs
crates/mcb-application/src/use_cases/: context_service.rs  indexing_service.rs  mod.rs  search_service.rs
crates/mcb-application/tests/: unit.rs  use_cases_test.rs
crates/mcb-application/tests/unit/: registry_tests.rs  search_tests.rs  use_cases_tests.rs
crates/mcb-domain/: Cargo.toml
crates/mcb-domain/src/: constants.rs  mod.rs
crates/mcb-domain/src/entities/: code_chunk.rs  codebase.rs  mod.rs
crates/mcb-domain/src/events/: domain_events.rs  mod.rs
crates/mcb-domain/src/ports/: admin.rs  mod.rs
crates/mcb-domain/src/repositories/: mod.rs  search_repository.rs
crates/mcb-domain/src/value_objects/: browse.rs  config.rs  embedding.rs  mod.rs  search.rs  types.rs
crates/mcb-domain/tests/: codebase_tests.rs  config_tests.rs  constants_tests.rs  domain_events_tests.rs  embedding_tests.rs  entity_value_object_integration.rs  error_tests.rs  integration.rs  search_tests.rs  semantic_search_workflow.rs  types_tests.rs  unit.rs
crates/mcb-domain/tests/integration/: entity_value_object_integration.rs  semantic_search_workflow.rs
crates/mcb-domain/tests/unit/: browse_tests.rs  chunk_repository_tests.rs  code_chunk_tests.rs
crates/mcb-infrastructure/: Cargo.toml
crates/mcb-infrastructure/src/: constants.rs  error_ext.rs  health.rs  logging.rs  mod.rs
crates/mcb-infrastructure/src/cache/: config.rs  factory.rs  mod.rs  provider.rs  queue.rs
crates/mcb-infrastructure/src/config/: data.rs  loader.rs  providers.rs  server.rs  watcher.rs
crates/mcb-infrastructure/src/crypto/: encryption.rs  mod.rs  password.rs  token.rs  utils.rs
crates/mcb-infrastructure/src/di/: admin.rs  bootstrap.rs  catalog.rs  dispatch.rs  handles.rs  mod.rs  provider_resolvers.rs  resolver.rs
crates/mcb-infrastructure/src/infrastructure/: admin.rs  auth.rs  events.rs  lifecycle.rs  metrics.rs  mod.rs  snapshot.rs  sync.rs
crates/mcb-infrastructure/src/routing/: health.rs  mod.rs  router.rs
crates/mcb-infrastructure/src/tests/: auth_tests.rs  snapshot_tests.rs  sync_tests.rs
crates/mcb-infrastructure/src/utils/: file.rs  mod.rs
crates/mcb-infrastructure/tests/: auth_test.rs  constants_test.rs  error_ext_test.rs  health_test.rs  integration.rs  lib.rs  logging_test.rs  snapshot_test.rs  sync_test.rs  unit.rs
crates/mcb-infrastructure/tests/cache/: config_test.rs  factory_test.rs  mod.rs  provider_test.rs  queue_test.rs
crates/mcb-infrastructure/tests/config/: loader_test.rs  mod.rs  providers_test.rs  server_test.rs  validation_test.rs  watcher_test.rs
crates/mcb-infrastructure/tests/di/: architecture_validation_tests.rs  catalog_tests.rs  dispatch_test.rs  dispatch_tests.rs  factory_test.rs  mod.rs  modules_test.rs  modules_tests.rs  resolver_tests.rs
crates/mcb-infrastructure/tests/test_utils/: mod.rs  real_providers.rs
crates/mcb-infrastructure/tests/unit/: auth_tests.rs  config_figment_tests.rs  constants_tests.rs  di_tests.rs  health_tests.rs  lifecycle_tests.rs  logging_tests.rs  router_tests.rs  snapshot_tests.rs  sync_tests.rs
crates/mcb-infrastructure/tests/utils/: file_test.rs  mod.rs  timing_test.rs
crates/mcb-providers/: Cargo.toml
crates/mcb-providers/src/: constants.rs  lib.rs
crates/mcb-providers/src/admin/: indexing.rs  metrics.rs  mod.rs  shutdown.rs
crates/mcb-providers/src/cache/: mod.rs  moka.rs  null.rs  (+1 more)
crates/mcb-providers/tests/: unit.rs
crates/mcb-server/: Cargo.toml
crates/mcb-server/src/: args.rs  auth.rs  builder.rs  collection_mapping.rs  constants.rs  formatter.rs  init.rs  lib.rs  main.rs  mcp_server.rs
crates/mcb-server/tests/: builder_test.rs  formatter_test.rs  golden_acceptance.rs  integration.rs  lib.rs  mcp_error_handling_test.rs  unit.rs
crates/mcb-validate/: Cargo.toml
crates/mcb-validate/rules/: schema.json
crates/mcb-validate/src/: async_patterns.rs  clean_architecture.rs  dependency.rs  documentation.rs  generic_reporter.rs  implementation.rs  kiss.rs  layer_flow.rs  lib.rs  naming.rs  organization.rs  pattern_validator.rs  patterns.rs  performance.rs  pmat.rs  port_adapter.rs  quality.rs  reporter.rs  scan.rs  shaku.rs  solid.rs  test_quality.rs  tests_org.rs  validator_trait.rs  violation_macro.rs  violation_trait.rs
crates/mcb-validate/tests/: architecture_rules_test.rs  ast_executor_test.rs  async_patterns_test.rs  ca001_integration_test.rs  cargo_dependency_test.rs  integration.rs  integration_architecture.rs  integration_ast.rs  integration_duplication.rs  integration_full.rs  integration_linters.rs  integration_metrics.rs  integration_rca_metrics.rs  integration_test.rs  integration_yaml_metrics.rs  patterns_test.rs  quality_test.rs  rete_engine_test.rs  template_engine_test.rs  test_utils.rs  unit.rs  yaml_loader_test.rs
crates/mcb/src/: lib.rs  main.rs
crates/mcb/tests/: stdio_transport_integration.rs
crates/mcp-context-browser/: Cargo.toml
libs/mcb-tree-sitter-analysis/: Cargo.toml
libs/mcb-tree-sitter-analysis/src/: complexity.rs  lib.rs  processor.rs  structure.rs
workspace-next/crates/mcb/: Cargo.toml
workspace-next/crates/mcb-application/: Cargo.toml
workspace-next/crates/mcb-infrastructure/: Cargo.toml
workspace-next/crates/mcb-server/: Cargo.toml
(+1213 files in other folders)
