[package]
name = "docs-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Automated Documentation Generator for Self-Documenting Codebase v0.0.4"
homepage = "https://github.com/marlonsc/mcp-context-browser"
documentation = "https://github.com/marlonsc/mcp-context-browser#readme"

[[bin]]
name = "docs-generator"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.11"
walkdir = "2.5"

# Configuration
config = "0.15"
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Code analysis and documentation generation
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
cargo_metadata = "0.18"

# Template engine for documentation generation
handlebars = "6.4"
tera = "1.20"

# File operations
fs2 = "0.4"

# HTTP client for external documentation
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Markdown processing
pulldown-cmark = "0.11"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"