[package]
name = "docs-quality-gate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Documentation Quality Assurance Gates for v0.0.4"
homepage = "https://github.com/marlonsc/mcp-context-browser"
documentation = "https://github.com/marlonsc/mcp-context-browser#readme"

[[bin]]
name = "quality-gate"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.11"
walkdir = "2.5"

# Configuration
config = "0.15"
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Quality checks
cargo-spellcheck = { version = "0.13", optional = true }
cargo-deadlinks = { version = "0.8", optional = true }

# File operations
fs2 = "0.4"

# HTTP client for external checks
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }

[features]
default = []
spellcheck = ["cargo-spellcheck"]
deadlinks = ["cargo-deadlinks"]