[package]
name = "mcb-application"
version = "0.1.4"
edition = "2024"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
license = "MIT"
keywords = ["application", "use-cases", "mcp", "semantic-search"]
categories = ["development-tools", "api-bindings"]
description = "Application layer for MCP Context Browser - Use cases and business logic orchestration"
readme = "README.md"
repository = "https://github.com/marlonsc/mcb"
homepage = "https://github.com/marlonsc/mcb"
rust-version = "1.89"

[lib]
name = "mcb_application"
path = "src/lib.rs"

[dependencies]
# Domain layer - core business logic and port traits
mcb-domain = { path = "../mcb-domain" }

# NOTE: mcb-providers is NOT a dependency here to avoid circular deps.
# Providers register themselves into the linkme registry slices declared here.
# mcb-infrastructure pulls in mcb-providers to complete the registration.

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Dependency injection

# Plugin registration
linkme = "0.3"

# Utilities
uuid = { workspace = true }

# Async streams for event subscription
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Real providers for integration tests - forces linkme registration
mcb-providers = { path = "../mcb-providers" }