[package]
name = "mcb-infrastructure"
version = "0.1.1"
edition = "2021"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
license = "MIT"
keywords = ["infrastructure", "mcp", "semantic-search"]
categories = ["development-tools", "api-bindings"]
description = "Infrastructure layer for MCP Context Browser - Cross-cutting technical concerns"
readme = "README.md"
repository = "https://github.com/marlonsc/mcp-context-browser"
homepage = "https://github.com/marlonsc/mcp-context-browser"
rust-version = "1.89"

[lib]
name = "mcb_infrastructure"
path = "src/mod.rs"

[dependencies]
# Domain layer - core business logic and port traits
mcb-domain = { path = "../mcb-domain" }

# Application layer - use cases and business logic orchestration
mcb-application = { path = "../mcb-application" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }

# Dependency injection
dill = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# CLI
clap = { workspace = true }

# File operations
walkdir = { workspace = true }

# Regex
regex = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Template engines
handlebars = { workspace = true }
tera = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
rand = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }

# Database
r2d2 = { workspace = true }
r2d2_postgres = { workspace = true }

# Hostname
hostname = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Utilities
uuid = { workspace = true }
dirs = { workspace = true }

# HTTP server
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# System metrics
sysinfo = { workspace = true }
nix = { workspace = true }

# Fast globbing
glob = { workspace = true }

# Git ignore parsing
ignore = { workspace = true }

# Concurrent processing
futures = { workspace = true }
rayon = { workspace = true }

# Text processing
unicode-segmentation = { workspace = true }

# Schema generation for MCP
schemars = { workspace = true }

# Input validation
validator = { workspace = true }

# MCP SDK
rmcp = { workspace = true }

# Advanced Multi-Provider Strategy
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
health = { workspace = true }

# Additional dependencies
async-trait = { workspace = true }
downcast-rs = { workspace = true }
futures-util = { workspace = true }

# Service layer improvements
itertools = { workspace = true }
humantime = { workspace = true }

# Shell expansion
shellexpand = { workspace = true }

# Compression
flate2 = { workspace = true }
tar = { workspace = true }
seahash = { workspace = true }

# Additional crypto
pbkdf2 = { workspace = true }
hmac = { workspace = true }

# Logging appenders
tracing-appender = { workspace = true }

# Benchmarking
criterion = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Link mcb-providers for linkme auto-registration in tests
mcb-providers = { path = "../mcb-providers" }