[package]
name = "mcb-server"
version = "0.1.3"
edition = "2024"
authors = ["Marlon Costa <marlonsc@gmail.com>"]
license = "MIT"
keywords = ["mcp", "server", "semantic-search", "code-analysis", "vector-embeddings"]
categories = ["development-tools", "api-bindings", "science::artificial-intelligence"]
description = "MCP Context Browser - Server transport and protocol layer"
readme = "README.md"
repository = "https://github.com/marlonsc/mcp-context-browser"
homepage = "https://github.com/marlonsc/mcp-context-browser"
rust-version = "1.89"

[lib]
name = "mcb_server"
path = "src/lib.rs"

[[bin]]
name = "mcb"
path = "src/main.rs"

[dependencies]
# Domain layer - core contracts and types
mcb-domain = { path = "../mcb-domain" }
# Application layer - use cases and business logic
mcb-application = { path = "../mcb-application" }
# Infrastructure layer - configuration and DI
mcb-infrastructure = { path = "../mcb-infrastructure" }

# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP server - migrated from Axum to Rocket in v0.1.2 (ADR-026)
rocket = { workspace = true }

# HTTP client - for client mode connecting to remote server
reqwest = { workspace = true }

# MCP SDK
rmcp = { workspace = true }

# Template engines
handlebars = { workspace = true }
tera = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }

# System metrics
sysinfo = { workspace = true }

# Utilities
uuid = { workspace = true }

# Schema generation for MCP
schemars = { workspace = true }
# Input validation
validator = { workspace = true }

# Advanced Multi-Provider Strategy
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dashmap = { workspace = true }
health = { workspace = true }

# Hashing for simple embeddings
sha2 = "0.10"

# Event bus
async-nats = { workspace = true }

# Configuration watching
notify = { workspace = true }

# Directory paths
dirs = "6.0"

# Compression
flate2 = { workspace = true }
tar = { workspace = true }

# Async streaming for HTTP SSE
futures = { workspace = true }
async-stream = { workspace = true }

# File locking for concurrent access
libc = "0.2"

# Providers - MUST be in dependencies (not dev-dependencies) for linkme inventory registration
mcb-providers = { path = "../mcb-providers", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"
async-trait = { workspace = true }
