[package]
name = "mcb-validate"
version = "0.1.1"
edition = "2021"
description = "Architecture validation for MCP Context Browser workspace"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
# Rust AST parsing
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
proc-macro2 = "1.0"

# File traversal and globbing
walkdir.workspace = true
glob.workspace = true

# Pattern matching
regex.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"

# TOML parsing for Cargo.toml
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Date/time for timestamps
chrono.workspace = true

# CLI (optional)
clap = { workspace = true, optional = true }

# Rule Engines - Core do sistema
rust-rule-engine = "1.16"  # RETE-UL algorithm, GRL syntax
rusty-rules = "0.2"        # JSON DSL rules engine

# Validation libraries - Para estruturas e campos
validator = { version = "0.20", features = ["derive"] }
garde = { version = "0.21", features = ["derive"] }

# JSON Schema validation - Para validar regras YAML
jsonschema = "0.17"

# Pest parser - Para DSL avançada
pest = "2.8"
pest_derive = "2.8"

# Plugin system - Para descoberta automática
inventory.workspace = true

# JSON Path - Para navegação complexa
jsonpath-rust = "0.7"

# Lazy static values
once_cell = "1.19"

# Tree-sitter for AST parsing (usando versões da workspace)
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true

# AST processing - using tree-sitter directly

# Async traits
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
cli = ["clap"]

# Binary will be added when CLI feature is implemented
# [[bin]]
# name = "mcb-validate"
# required-features = ["cli"]
