[package]
name = "mcb-validate"
version = "0.1.1"
edition = "2024"
description = "Architecture validation for MCP Context Browser workspace"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
# Rust AST parsing
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
proc-macro2 = "1.0"

# File traversal and globbing
walkdir.workspace = true
glob.workspace = true

# Pattern matching
regex.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"

# TOML parsing for Cargo.toml
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Date/time for timestamps
chrono.workspace = true

# CLI (optional)
clap = { workspace = true, optional = true }

# Rule Engines - Core do sistema
rust-rule-engine = "1.16"  # RETE-UL algorithm, GRL syntax
rusty-rules = "0.2"        # JSON DSL rules engine
evalexpr = "13"            # Simple expression evaluation

# Validation libraries - Para estruturas e campos
validator = { version = "0.20", features = ["derive"] }
garde = { version = "0.22", features = ["derive"] }

# JSON Schema validation - Para validar regras YAML
jsonschema = "0.40"

# Pest parser - Para DSL avançada
pest = "2.8"
pest_derive = "2.8"

# JSON Path - Para navegação complexa
jsonpath-rust = "1.0.4"

# Lazy static values
once_cell = "1.19"

# Code metrics analysis - using rust-code-analysis fork with tree-sitter 0.26.3 + Kotlin
rust-code-analysis = { git = "https://github.com/marlon-costa-dc/rust-code-analysis", branch = "tree-sitter-0.26-kotlin" }

# Tree-sitter for AST parsing (usando versões da workspace)
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true

# AST processing - using tree-sitter directly

# Async traits
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.14"

[features]
default = ["rca-metrics"]
cli = ["clap"]
rca-metrics = []

# Binary will be added when CLI feature is implemented
# [[bin]]
# name = "mcb-validate"
# required-features = ["cli"]
